// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav renders a Nav 1`] = `
.c3 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c1 img {
  max-height: 32px;
  vertical-align: middle;
}

.c1 .c2 {
  margin: 0;
  vertical-align: middle;
}

.c1 .IconPlus {
  margin: 0 20px;
}

.c9 {
  background: #e5e5e5;
  color: black;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px 30px;
  font-size: 13px;
  line-height: 1;
  outline: 0;
  -webkit-transition: background-color .25s,color .25s;
  transition: background-color .25s,color .25s;
  margin: 10px;
  border: none;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c9:hover:not(:disabled) {
  cursor: pointer;
  background: #cccccc;
}

.c8 {
  background: black;
  color: white;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 11px;
  line-height: 1.65em;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  height: 30px;
  width: 80px;
  border-radius: 2px;
}

.c8:hover:not(:disabled) {
  background: #6e1fff;
}

.c11 {
  background: #e5e5e5;
  color: black;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px 30px;
  font-size: 13px;
  line-height: 1;
  outline: 0;
  -webkit-transition: background-color .25s,color .25s;
  transition: background-color .25s,color .25s;
  margin: 10px;
  border: none;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 11px;
  line-height: 1.65em;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  height: 30px;
  width: 80px;
  background-color: white;
  border-radius: 2px;
}

.c11:hover:not(:disabled) {
  cursor: pointer;
  background: #cccccc;
}

.c6 {
  text-decoration: none;
}

.c13 {
  margin-right: 5px;
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 46px;
  width: 100%;
  background-color: black;
  color: white;
}

.c4 {
  font-family: 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 17px;
  line-height: 1.1em;
}

@media (max-width:720px) {
  .c1 img {
    max-height: 24px;
  }

  .c1 .c2 {
    font-size: 24px;
  }

  .c1 .IconPlus {
    margin: 0 15px;
  }
}

@media (max-width:720px) {
  .c5 .c7,
  .c5 .c10 {
    display: none;
  }

  .c5 .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="c0"
>
  <div
    className="PartnerInline c1"
  >
    <a
      href="/"
    >
      <div
        className="c2 c3"
        style={undefined}
      >
        
      </div>
    </a>
  </div>
  <div
    className="c4"
  >
    Artsy Editorial
  </div>
  <div
    className="c5"
  >
    <a
      className="mlh-login c6"
      href="/log_in"
    >
      <button
        className="c7 c8 c9"
      >
        <span>
          Login
        </span>
      </button>
    </a>
    <a
      className="mlh-signup c6"
      href="/sign_up"
    >
      <button
        className="c10 c11"
      >
        <span>
          Signup
        </span>
      </button>
    </a>
    <div
      className="c12 c13"
    >
      <svg
        enable-background="new 0 0 32 32"
        fill="white"
        version="1.1"
        viewBox="0 0 32 32"
        width="32px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="2"
          width="20"
          x="6"
          y="22"
        />
        <rect
          height="2"
          width="20"
          x="6"
          y="15"
        />
        <rect
          height="2"
          width="20"
          x="6"
          y="8"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Nav renders a sponsored nav 1`] = `
.c3 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
}

.c4 {
  width: 15px;
  height: 15px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c1 img {
  max-height: 32px;
  vertical-align: middle;
}

.c1 .c2 {
  margin: 0;
  vertical-align: middle;
}

.c1 .IconPlus {
  margin: 0 20px;
}

.c10 {
  background: #e5e5e5;
  color: black;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px 30px;
  font-size: 13px;
  line-height: 1;
  outline: 0;
  -webkit-transition: background-color .25s,color .25s;
  transition: background-color .25s,color .25s;
  margin: 10px;
  border: none;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c10:hover:not(:disabled) {
  cursor: pointer;
  background: #cccccc;
}

.c9 {
  background: black;
  color: white;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 11px;
  line-height: 1.65em;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  height: 30px;
  width: 80px;
  border-radius: 2px;
}

.c9:hover:not(:disabled) {
  background: #6e1fff;
}

.c12 {
  background: #e5e5e5;
  color: black;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px 30px;
  font-size: 13px;
  line-height: 1;
  outline: 0;
  -webkit-transition: background-color .25s,color .25s;
  transition: background-color .25s,color .25s;
  margin: 10px;
  border: none;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 11px;
  line-height: 1.65em;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  height: 30px;
  width: 80px;
  background-color: white;
  border-radius: 2px;
}

.c12:hover:not(:disabled) {
  cursor: pointer;
  background: #cccccc;
}

.c7 {
  text-decoration: none;
}

.c14 {
  margin-right: 5px;
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 46px;
  width: 100%;
  background-color: black;
  color: white;
}

.c5 {
  font-family: 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 17px;
  line-height: 1.1em;
}

@media (max-width:900px) {
  .c4 {
    width: 13px;
    height: 13px;
  }
}

@media (max-width:720px) {
  .c1 img {
    max-height: 24px;
  }

  .c1 .c2 {
    font-size: 24px;
  }

  .c1 .IconPlus {
    margin: 0 15px;
  }
}

@media (max-width:720px) {
  .c6 .c8,
  .c6 .c11 {
    display: none;
  }

  .c6 .c13 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="c0"
>
  <div
    className="PartnerInline c1"
  >
    <a
      href="/"
    >
      <div
        className="c2 c3"
        style={undefined}
      >
        
      </div>
    </a>
    <svg
      className="IconPlus c4"
      style={
        Object {
          "margin": undefined,
        }
      }
      version="1.1"
      viewBox="0 0 15 15"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
        stroke="none"
        strokeWidth="2"
      >
        <g
          fill="white"
          transform="translate(-101.000000, -18.000000)"
        >
          <g
            transform="translate(101.000000, 18.000000)"
          >
            <rect
              height="1"
              width="15"
              x="0"
              y="7"
            />
            <rect
              height="1"
              transform="translate(7.500000, 7.500000) rotate(-90.000000) translate(-7.500000, -7.500000) "
              width="15"
              x="0"
              y="7"
            />
          </g>
        </g>
      </g>
    </svg>
    <a
      href={undefined}
      onClick={[Function]}
      target="_blank"
    >
      <img
        src="https://artsy-media-uploads.s3.amazonaws.com/F4RVgsSXv3q9Nrt59P8gbA%2Ffullscreen.png"
      />
    </a>
  </div>
  <div
    className="c5"
  >
    Artsy Editorial
  </div>
  <div
    className="c6"
  >
    <a
      className="mlh-login c7"
      href="/log_in"
    >
      <button
        className="c8 c9 c10"
      >
        <span>
          Login
        </span>
      </button>
    </a>
    <a
      className="mlh-signup c7"
      href="/sign_up"
    >
      <button
        className="c11 c12"
      >
        <span>
          Signup
        </span>
      </button>
    </a>
    <div
      className="c13 c14"
    >
      <svg
        enable-background="new 0 0 32 32"
        fill="white"
        version="1.1"
        viewBox="0 0 32 32"
        width="32px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="2"
          width="20"
          x="6"
          y="22"
        />
        <rect
          height="2"
          width="20"
          x="6"
          y="15"
        />
        <rect
          height="2"
          width="20"
          x="6"
          y="8"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Nav renders a transparent nav 1`] = `
.c3 {
  font-family: artsy-icons;
  color: white;
  font-size: 32px;
  margin: 0 5px;
  display: inline-block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10px;
}

.c1 img {
  max-height: 32px;
  vertical-align: middle;
}

.c1 .c2 {
  margin: 0;
  vertical-align: middle;
}

.c1 .IconPlus {
  margin: 0 20px;
}

.c9 {
  background: #e5e5e5;
  color: black;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px 30px;
  font-size: 13px;
  line-height: 1;
  outline: 0;
  -webkit-transition: background-color .25s,color .25s;
  transition: background-color .25s,color .25s;
  margin: 10px;
  border: none;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
}

.c9:hover:not(:disabled) {
  cursor: pointer;
  background: #cccccc;
}

.c8 {
  background: black;
  color: white;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 11px;
  line-height: 1.65em;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  height: 30px;
  width: 80px;
  border-radius: 2px;
}

.c8:hover:not(:disabled) {
  background: #6e1fff;
}

.c11 {
  background: #e5e5e5;
  color: black;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 15px 30px;
  font-size: 13px;
  line-height: 1;
  outline: 0;
  -webkit-transition: background-color .25s,color .25s;
  transition: background-color .25s,color .25s;
  margin: 10px;
  border: none;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-family: 'ITC Avant Garde Gothic W04', 'AvantGardeGothicITCW01D 731075', 'AvantGardeGothicITCW01Dm', 'Helvetica', 'sans-serif';
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-size: 11px;
  line-height: 1.65em;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  height: 30px;
  width: 80px;
  background-color: white;
  border-radius: 2px;
}

.c11:hover:not(:disabled) {
  cursor: pointer;
  background: #cccccc;
}

.c6 {
  text-decoration: none;
}

.c13 {
  margin-right: 5px;
  display: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 46px;
  width: 100%;
  background-color: transparent;
  color: white;
}

.c4 {
  font-family: 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif';
  -webkit-font-smoothing: antialiased;
  font-size: 17px;
  line-height: 1.1em;
}

@media (max-width:720px) {
  .c1 img {
    max-height: 24px;
  }

  .c1 .c2 {
    font-size: 24px;
  }

  .c1 .IconPlus {
    margin: 0 15px;
  }
}

@media (max-width:720px) {
  .c5 .c7,
  .c5 .c10 {
    display: none;
  }

  .c5 .c12 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

<div
  className="c0"
>
  <div
    className="PartnerInline c1"
  >
    <a
      href="/"
    >
      <div
        className="c2 c3"
        style={undefined}
      >
        
      </div>
    </a>
  </div>
  <div
    className="c4"
  >
    Artsy Editorial
  </div>
  <div
    className="c5"
  >
    <a
      className="mlh-login c6"
      href="/log_in"
    >
      <button
        className="c7 c8 c9"
      >
        <span>
          Login
        </span>
      </button>
    </a>
    <a
      className="mlh-signup c6"
      href="/sign_up"
    >
      <button
        className="c10 c11"
      >
        <span>
          Signup
        </span>
      </button>
    </a>
    <div
      className="c12 c13"
    >
      <svg
        enable-background="new 0 0 32 32"
        fill="white"
        version="1.1"
        viewBox="0 0 32 32"
        width="32px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="2"
          width="20"
          x="6"
          y="22"
        />
        <rect
          height="2"
          width="20"
          x="6"
          y="15"
        />
        <rect
          height="2"
          width="20"
          x="6"
          y="8"
        />
      </svg>
    </div>
  </div>
</div>
`;
